--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,5 @@ python-dotenv===1.1.1
 azure-search-documents==11.5.3
 azure-storage-blob==12.26.0
 python-multipart==0.0.20
+langchain-openai==0.3.28
+langsmith==0.4.11
