--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    image: angelbot/backend:0.1.0
     container_name: fast-api
     env_file:
       - .env
