--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,10 @@
 name: Azure Login
 run-name: ${{ github.actor }} triggered a login test 🚀
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
   login-azure: # internal job name
@@ -15,5 +19,12 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+      - name: Verify Azure CLI context
+        run: az account show --output table
+  
+      - name: List resource groups
+        run: az group list --output table
+  
       - name: Post-login message
-        run: echo "✅ Successfully logged in to Azure."
+        run: echo "✅ Successfully logged in to Azure and listed resource groups."
+        
