--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 services:
-
   app:
     build:
       context: .
@@ -11,19 +10,23 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./app:/app/app
+      - ./app:/app/app    
+    depends_on:
+      - redis_local
+    restart: unless-stopped
+    networks:
+      - angelbot_net
 
-
-  redis:
-    image: redis:7
-    container_name: redis
+  redis_local:
+    image: redis:8.2.2
+    container_name: redis_local
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
     restart: always
-    profiles: ["local"]
-
+    networks:
+      - angelbot_net
 
   ngrok:
     image: ngrok/ngrok:latest
@@ -39,4 +42,10 @@ services:
       - ./ngrok.yml:/etc/ngrok.yml
     ports:
       - 4041:4040
-      
+
+volumes:
+  redis_data:
+
+networks:
+  angelbot_net:
+    driver: bridge
