--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
 
   redis:
     image: redis:8.2.2
-    container_name: redis_local
+    container_name: redis
     ports:
       - "6379:6379"
     volumes:
